--- a/style.css
+++ b/style.css
@@ -846,7 +846,7 @@ label {
   min-height: 448px;
   background-size: cover;
   background-position: center;
-  background-image: url(../images/fon.svg);
+  background-image: url(images/fon.svg);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -1032,7 +1032,7 @@ label {
     height: 111px;
     background-size: cover;
     background-position: center;
-    background-image: url(../images/advertisement004.jpg);
+    background-image: url(images/advertisement004.jpg);
   }
   .img__big {
     display: none;
